# gnx

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  workspace.json
.github/: copilot-instructions.md
.github/workflows/: cmake-multi-platform.yml  ghcr.yml
binder/: Dockerfile
cmake/: gnx-config.cmake.in
codespaces/: Dockerfile
doc/: 01_the_basics.md  complement.md  count.md  index.md  local_align.md  myst.yml  psq.md  quickstart.md  sandbox.md  tutorial.md
doc/algorithms/: complement.md  count.md  local_align.md
doc/notebooks/: sandbox.md
example/: complement_example.cpp  count_example.cpp  local_align_example.cpp  local_align_matrix_example.cpp  sq_view_ranges_example.cpp
include/: CMakeLists.txt
include/gnx/: base  commons.hpp  concepts.hpp  execution.hpp  memory.hpp  psq.hpp  sq.hpp  sq_view.hpp  sqb.hpp  views.hpp  visitor.hpp
include/gnx/algorithms/: compare.hpp  complement.hpp  count.hpp  is_peptide.hpp  random.hpp  translate.hpp  valid.hpp
include/gnx/backend/: virtual_vector.hpp
include/gnx/interface/: forward_stream.hpp
include/gnx/io/: bgzf.h  fastaqz.hpp
include/gnx/lut/: ansi.hpp  case_fold.hpp  codon.hpp  color_schemes.hpp  complement.hpp  lut_commons.hpp  pack2bit.hpp  peptide.hpp  phred33.hpp  phred64.hpp  valid.hpp
include/gnx/utility/: create_index.hpp  describe.hpp  dotplot.hpp  gc_content.hpp  print.hpp  summary.hpp  wget.hpp
include/gnx/utility/detail/: describe.hpp  dotplot.hpp  knetfile.h  net_ftp.hpp  net_http.hpp  print.hpp  summary.hpp  wget.hpp
include/gynx/: concepts.hpp  memory.hpp  sq.hpp  sq_view.hpp
include/gynx/algorithms/: random.hpp  valid.hpp
include/gynx/io/: fastaqz.hpp
include/gynx/lut/: valid.hpp
perf/: CMakeLists.txt  benchmarks.cpp
perf/results/: A100_cuda_4_cores.txt  H100_cuda_4_cores.txt  mi300a_rocm.txt
src/: CMakeLists.txt  ansi.hpp  bgzip.cpp  bgzip.hpp  complement.cpp  complement.hpp  count.hpp  gnx.cpp  gnx.hpp  prefix.cpp  prefix.hpp
test/: CMakeLists.txt  test_algorithm_compare.cpp  test_algorithm_complement.cpp  test_algorithm_count.cpp  test_algorithm_local_align.cpp  test_algorithm_random.cpp  test_algorithm_translate.cpp  test_algorithm_valid.cpp  test_backend_forward_stream.cpp  test_backend_virtual_vector.cpp  test_core_psq2.cpp  test_core_sq.cpp  test_io_fastaqz.cpp  test_utility_gc_content.cpp  test_utility_wget.cpp  test_view_psq2.cpp  test_view_sq.cpp  unit_tests.cpp
